Added translation key for marketing sources

--- a/apps/web/components/CrudTable.module.less
+++ b/apps/web/components/CrudTable.module.less
@@ -155,6 +155,10 @@ title {
     display: block;
   }
 
+  .marketing-sources-table-container {
+    margin-top: 14px;
+  }
+
   .marketing-source-page {
     .marketing-text-style {
       display: flex;
@@ -163,7 +167,7 @@ title {
         margin-bottom: 0px;
         font-family: Circular-Std-Medium;
         font-style: normal;
-        font-weight: 500;
+        font-weight: bolder;
         font-size: 17px;
         line-height: 22px;
         text-transform: capitalize;
