PAB2655/resolved-issue-for-toggle-btn-view

--- a/apps/web/components/services/ServicesTab/services_tab.module.less
+++ b/apps/web/components/services/ServicesTab/services_tab.module.less
@@ -146,6 +146,10 @@
         button:last-child {
           padding: 1.5em;
         }
+        :global .toggleBtn {
+          margin-right: 15px;
+          padding: 0em 1.5em !important;
+        }
       }
     }
 
