--- a/apps/web/components/AddButton.module.less
+++ b/apps/web/components/AddButton.module.less
@@ -168,7 +168,10 @@
   .desktop-view-none {
     display: block;
   }
-
+  .mobileSearchInput {
+    margin-left: 15px;
+    width: 100%;
+  }
   .marketingSourceFilterHeader {
     padding-top: 26px;
     padding-bottom: 16px;
