--- a/libs/ui/src/lib/team-report/TeamReport.module.less
+++ b/libs/ui/src/lib/team-report/TeamReport.module.less
@@ -19,10 +19,20 @@
     padding-left: 32px;
     background-color:#FAFAFA;
   }
+  .ant-table-thead > tr > th.ant-table-row-expand-icon-cell {
+    position: sticky !important;
+    z-index: 9999;
+    left: 192px;
+    background: #fafafa;
+  }
   .ant-table-tbody > tr > td.ant-table-cell.ant-table-row-expand-icon-cell {
     border-right: 1px solid #f1f1f1;
     text-align: center;
     padding: 10px 16px;
+    background: #fff;
+    position: sticky !important;
+    z-index: 9999;
+    left: 192px;
   }
   .ant-table-expanded-row {
     display: none;
