PAB2655/completed-all-issues-described-by-william

--- a/libs/ui/src/lib/choose-modal/ChooseModal.module.less
+++ b/libs/ui/src/lib/choose-modal/ChooseModal.module.less
@@ -33,6 +33,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  padding: 0px 15px;
 }
 
 .chooseModalHeader {
@@ -75,7 +76,7 @@
   border: 1px solid var(--border-color-base);
   border-radius: 4px;
   margin-bottom: 1rem;
-  >div {
+  > div {
     &:nth-child(1) {
       display: flex;
       justify-content: center;
@@ -136,7 +137,7 @@
     font-weight: 400;
     color: var(--light-grey-color);
   }
-  >div {
+  > div {
     width: 40px;
     height: 40px;
     background-color: white;
