--- a/apps/web/components/services/CategoriesTab/categories_tab.module.less
+++ b/apps/web/components/services/CategoriesTab/categories_tab.module.less
@@ -117,3 +117,45 @@
     }
   }
 }
+
+.appointmentColor {
+  margin-top: 15px;
+}
+
+.appointmentColorTitle {
+  font-family: var(--font-family);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  color: var(--light-grey-color);
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.appointmentColorItems {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.appointmentColorItem {
+  cursor: pointer;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  margin: 0 12px 0px 0;
+  > div {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+  }
+}
+
+.appointmentColorSelected {
+  border: 1px solid var(--primary-color);
+  > div {
+    border: 1px solid white;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+  }
+}
