--- a/libs/ui/src/lib/library-card/LibraryCard.module.less
+++ b/libs/ui/src/lib/library-card/LibraryCard.module.less
@@ -12,42 +12,28 @@
   justify-content: flex-start;
   align-items: flex-start;
 
-  :global {
-    div {
-      margin-bottom: 15px;
-      font-size: 18px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      width: 100%;
-
-      span.plus {
-        background: #eef7fb;
-        border-radius: 6px;
-        font-weight: normal;
-        font-size: 12px;
-        line-height: 14px;
-        color: #54b2d3;
-        padding: 5px 10px;
-      }
-    }
-    h4 {
-      font-style: normal;
-      font-size: 14px;
-      line-height: 20px;
-      text-transform: capitalize;
-      color: #3d3d46;
-      margin-bottom: 0px;
-    }
-    p {
-      font-style: normal;
-      font-weight: normal;
-      font-size: 14px;
-      line-height: 22px;
-      color: #9292a3 !important;
-      margin-bottom: 0px;
-    }
+  > div {
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+  h4 {
+    font-style: normal;
+    font-size: 14px;
+    line-height: 20px;
+    text-transform: capitalize;
+    color: #3d3d46;
+    margin-bottom: 0px;
+  }
+  p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 22px;
+    color: #9292a3 !important;
+    margin-bottom: 0px;
   }
 
   &:hover {
