Updated-edit-group-modal-for-image

--- a/libs/ui/src/lib/create-service/CreateService.module.less
+++ b/libs/ui/src/lib/create-service/CreateService.module.less
@@ -25,7 +25,7 @@
 
 .createServiceSection {
   background-color: white;
-  max-width: 360px;
+  max-width: 560px;
   min-height: 266px;
   width: 100%;
   padding: 27px 32px 32px;
@@ -483,6 +483,10 @@
   justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
+
+  .createServiceSection {
+    max-width: 360px;
+  }
 
   @media screen and (max-width: 768px) {
     justify-content: center;
