--- a/apps/web/components/services/ServicesTab/services_tab.module.less
+++ b/apps/web/components/services/ServicesTab/services_tab.module.less
@@ -216,6 +216,18 @@
     }
   }
 }
+.createServiceImageContainer {
+  width: 100%;
+  height: 236px;
+  background-color: #f7f7f9;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+}
 
 :global {
   .ant-dropdown-menu {
