--- a/apps/web/components/services/ServicesTab/services_tab.module.less
+++ b/apps/web/components/services/ServicesTab/services_tab.module.less
@@ -396,6 +396,10 @@
       & > div {
         flex-direction: column;
         align-items: center;
+        p {
+          padding-left: 5px !important;
+          padding-right: 5px !important;
+        }
       }
     }
   }
