--- a/apps/web/pages/setup/services/index.module.less
+++ b/apps/web/pages/setup/services/index.module.less
@@ -124,6 +124,10 @@
               fill: #54b2d3;
             }
           }
+
+          .isMobile-search-input {
+            margin-bottom: 3.5px;
+          }
         }
         button.hidden-lg {
           margin-left: 20px;
@@ -281,8 +285,8 @@
         flex-direction: column;
         align-items: center;
         p {
-          padding-left: 5px;
-          padding-right: 5px;
+          padding-left: 5px !important;
+          padding-right: 5px !important;
         }
       }
     }
