Worked on create course modal and changed the create modal based on tab key

--- a/apps/web/pages/setup/courses-packages/index.module.less
+++ b/apps/web/pages/setup/courses-packages/index.module.less
@@ -48,4 +48,44 @@
 	 :global .ant-tabs-nav {
 		background: #fff;
 	}
+	:global	.ant-tabs {
+		overflow: visible;
+	}
+	.header-z-index {
+		:global .ant-table-header {
+			z-index: 5;
+		}
+	}	
+}
+
+
+.general-form-wrapper {
+	form {
+		.general-section {
+			max-width: 502px;
+			background: #FFFFFF;
+			border-radius: 4px;
+			margin: 40px auto 0;
+			padding: 27px 32px;
+			h4 {
+				font-size: 14px;
+				line-height: 24px;
+				color: #3D3D46;
+				margin-bottom: 20px;
+			}
+
+			.modal-add-button {
+				color: #9292a3;
+				margin-bottom: 9px;
+			}
+		}
+	}
+}
+
+.emp-section {
+	max-width: 502px;
+	background: #FFFFFF;
+	border-radius: 4px;
+	margin: 40px auto 0;
+	padding: 27px 32px;
 }
