--- a/libs/ui/src/lib/employees/Employees.module.less
+++ b/libs/ui/src/lib/employees/Employees.module.less
@@ -1,5 +1,9 @@
 .employeesContainer {
   width: 100%;
+  @media screen and (max-width: 767px) {
+    background: #fff;
+    padding: 12px;
+  }
   > h2 {
     font-family: var(--font-family);
     font-size: 14px;
