--- a/libs/ui/src/lib/colorpicker/ColorPicker.module.less
+++ b/libs/ui/src/lib/colorpicker/ColorPicker.module.less
@@ -1,6 +1,5 @@
 .color-picker-wrap {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
 }
 .color-item {
@@ -9,17 +8,24 @@
   height: 36px;
   margin: 4px 4px 4px 0;
   border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   // opacity: 0.2;
   // &:hover {
   //   opacity: 1;
   // }
   .badge {
     opacity: 0;
-    position: absolute;
-    right: 5px;
-    top: 4px;
-    color: #fff;
     font-size: 8px;
+    color: #fff;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--primary-color);
   }
 }
 .toggle-opacity {
@@ -31,9 +37,13 @@
 .color-item:hover .badge {
   opacity: 1;
 }
+.color-item:hover {
+  border: 2px solid #54b2d34d;
+}
 .selected-color {
   opacity: 1;
-  border: 1px solid var(--primary-color);
+  border: 2px solid #54b2d34d;
+  border-radius: 2px;
   .badge {
     opacity: 1;
   }
@@ -43,12 +53,29 @@
   font-size: 14px;
   line-height: 18px;
 }
+.add-color {
+  position: relative;
+  width: 36px;
+  height: 36px;
+  margin: 4px 4px 4px 0;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #b5bbbb4d;
+}
+.custom-picker{
+  margin-left: 150px;
+}
+.add-color:hover {
+  border: 2px solid #54b2d34d;
 
-@media (min-width: 200px) and (max-width: 767px) {
-  .color-item {
-    margin: 4px;
-  }
-  .color-picker-wrap {
-    justify-content: flex-start;
+  @media (min-width: 200px) and (max-width: 767px) {
+    .color-item {
+      margin: 4px;
+    }
+    .color-picker-wrap {
+      justify-content: flex-start;
+    }
   }
 }
