Worked on the responsive drawer and build table

--- a/apps/web/components/AddButton.module.less
+++ b/apps/web/components/AddButton.module.less
@@ -141,6 +141,9 @@
   .marketing-source {
     padding-left: 24px;
     padding-top: 14px;
+    .search-marketing-style {
+      width: 116px;
+    }
   }
 }
 
