--- a/libs/ui/src/lib/notificationBanner/NotificationBanner.module.less
+++ b/libs/ui/src/lib/notificationBanner/NotificationBanner.module.less
@@ -1,9 +1,5 @@
 .notification-body {
-  background: #e9faff;
-  background-position: right bottom;
-  background-repeat: no-repeat;
-  min-height: 136px;
-  border-radius: 4px;
+  background: #e9faff no-repeat right bottom;
   margin-bottom: 32px;
   min-height: 144px;
   @media screen and (max-width: 767px) {
@@ -59,6 +55,7 @@
   text-align: left;
   margin-top: 2px;
   margin-left: 10px;
+  margin-bottom: 10px;
   color: #54b2d3;
   position: absolute;
   bottom: 0;
