--- a/apps/web/components/Setup/CoursesPackages/index.module.less
+++ b/apps/web/components/Setup/CoursesPackages/index.module.less
@@ -1,226 +1,233 @@
 .general-form-wrapper {
-	form {
-		.general-section {
-			max-width: 502px;
-			background: #FFFFFF;
-			border-radius: 4px;
-			margin: 40px auto;
-			padding: 27px 32px;
-			@media screen and (max-width: 767px) {
-				padding: 12px;
-				margin-top: 24px;
-			}
-			 :global .ant-form-item {
-				margin-bottom: 20px;
-				.ant-form-item-label {
-					padding-bottom: 0;
-					label {
-						font-size: 14px;
-						line-height: 22px;
-						color: #9292A3;
-					}
-				}
-				.ant-form-item-control {
-					.ant-form-item-control-input {
-						.ant-form-item-control-input-content {
-							.ant-input-number {
-								width: 100%;
-							}
-						}
-					}
-				}
-			}
-			h4 {
-				font-size: 14px;
-				line-height: 24px;
-				color: #3D3D46;
-				margin-bottom: 20px;
-				@media screen and (max-width: 767px) {
-					display: none;
-				}
-			}
-			.modal-add-button {
-				color: #9292a3;
-				// margin-bottom: 9px;
-			}
-		}
-	}
-	@media screen and (max-width: 767px) {
-		padding: 0 8px;
-	}
+  form {
+    .general-section {
+      max-width: 502px;
+      background: #ffffff;
+      border-radius: 4px;
+      margin: 40px auto;
+      padding: 27px 32px;
+      @media screen and (max-width: 767px) {
+        padding: 12px;
+        margin-top: 24px;
+      }
+      :global .ant-form-item {
+        margin-bottom: 20px;
+        .ant-form-item-label {
+          padding-bottom: 0;
+          label {
+            font-size: 14px;
+            line-height: 22px;
+            color: #9292a3;
+          }
+        }
+        .ant-form-item-control {
+          .ant-form-item-control-input {
+            .ant-form-item-control-input-content {
+              .ant-input-number {
+                width: 100%;
+              }
+            }
+          }
+        }
+      }
+      h4 {
+        font-size: 14px;
+        line-height: 24px;
+        color: #3d3d46;
+        margin-bottom: 20px;
+        @media screen and (max-width: 767px) {
+          display: none;
+        }
+      }
+      .modal-add-button {
+        color: #9292a3;
+      }
+      .switch-label {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 18px;
+        color: #9292a3;
+        padding: 5px;
+      }
+    }
+  }
+  @media screen and (max-width: 767px) {
+    padding: 0 8px;
+  }
 }
 
 .emp-section {
-	max-width: 502px;
-	background: #FFFFFF;
-	border-radius: 4px;
-	margin: 40px auto;
-	padding: 27px 32px;
-	@media screen and (max-width: 767px) {
-		padding: 0 8px;
-		margin-top: 24px;
-		background: transparent;
-	}
+  max-width: 502px;
+  background: #ffffff;
+  border-radius: 4px;
+  margin: 40px auto;
+  padding: 27px 32px;
+  @media screen and (max-width: 767px) {
+    padding: 0 8px;
+    margin-top: 24px;
+    background: transparent;
+  }
 }
 
 .create-pk {
-	display: flex;
-	.build {
-		flex: 1;
-		max-width: calc(100% - 408px);
-		padding: 32px 24px 32px 32px;
-	}
-	.build-package {
-		flex: 1;
-		padding: 32px 24px 32px 32px;
-	}
-	.header-wrap {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		margin-bottom: 24px;
-		.title {
-			font-style: normal;
-			font-weight: normal;
-			font-size: 16px;
-			line-height: 20px;
-			color: #3D3D46;
-		}
-		.buttons {
-			display: flex;
-			.buttons-filter {
-				margin-right: 16px;
-			}
-		}
-	}
-	 :global .ant-table-wrapper {
-		.ant-table-container {
-			.ant-table-header {
-				th {
-					color: #9292A3;
-					font-weight: normal;
-					font-size: 12px;
-					line-height: 16px;
-					border-bottom: 1px solid #f1f1f1;
-				}
-			}
-			.ant-table-body {
-				td {
-					color: #3D3D46;
-					font-weight: normal;
-					font-size: 14px;
-					line-height: 18px;
-					border-bottom: 1px solid #f1f1f1;
-				}
-			}
-		}
-	}
-	.drawer {
-		flex: 1;
-		max-width: 408px;
-		background: #FFFFFF;
-		box-shadow: 0px -5px 11px rgba(0, 0, 0, 0.1);
-		height: auto;
-		.drawer-block {
-			padding: 27px 24px 24px;
-			.drawer-list {
-				margin-bottom: 26px;
-				 :global .ant-form-item-label {
-					padding: 0;
-					margin-bottom: 2px;
-					label {
-						color: #9292A3;
-						font-weight: normal;
-						font-size: 14px;
-						line-height: 24px;
-					}
-				}
-				 :global .ant-input-number {
-					width: 100%;
-				}
-			}
-		}
-		.drawer-buttons {
-			border-top: 1px solid #ECEDF0;
-			border-bottom: 1px solid #ECEDF0;
-			padding: 20px 24px;
-			display: flex;
-			justify-content: flex-end;
-			.buttons-filter {
-				margin-right: 16px;
-			}
-		}
-	}
+  display: flex;
+  .build {
+    flex: 1;
+    max-width: calc(100% - 408px);
+    padding: 32px 24px 32px 32px;
+  }
+  .build-package {
+    flex: 1;
+    padding: 32px 24px 32px 32px;
+  }
+  .header-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 24px;
+    .title {
+      font-style: normal;
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 20px;
+      color: #3d3d46;
+    }
+    .buttons {
+      display: flex;
+      .buttons-filter {
+        margin-right: 16px;
+      }
+    }
+  }
+  :global .ant-table-wrapper {
+    .ant-table-container {
+      .ant-table-header {
+        th {
+          color: #9292a3;
+          font-weight: normal;
+          font-size: 12px;
+          line-height: 16px;
+          border-bottom: 1px solid #f1f1f1;
+        }
+      }
+      .ant-table-body {
+        td {
+          color: #3d3d46;
+          font-weight: normal;
+          font-size: 14px;
+          line-height: 18px;
+          border-bottom: 1px solid #f1f1f1;
+        }
+      }
+    }
+  }
+  .drawer {
+    flex: 1;
+    max-width: 408px;
+    background: #ffffff;
+    box-shadow: 0px -5px 11px rgba(0, 0, 0, 0.1);
+    height: auto;
+    .drawer-block {
+      padding: 27px 24px 24px;
+      .drawer-list {
+        margin-bottom: 26px;
+        :global .ant-form-item-label {
+          padding: 0;
+          margin-bottom: 2px;
+          label {
+            color: #9292a3;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 24px;
+          }
+        }
+        :global .ant-input-number {
+          width: 100%;
+        }
+      }
+    }
+    .drawer-buttons {
+      border-top: 1px solid #ecedf0;
+      border-bottom: 1px solid #ecedf0;
+      padding: 20px 24px;
+      display: flex;
+      justify-content: flex-end;
+      .buttons-filter {
+        margin-right: 16px;
+      }
+    }
+  }
 }
 
 .mobile {
-	 :global {
-		.ant-drawer-content-wrapper {
-			.ant-drawer-content {
-				border-radius: 14px 14px 0 0;
-			}
-		}
-	}
-	.mobile-drawer {
-		.line {
-			width: 40px;
-			height: 3px;
-			background: #E3E3E5;
-			border-radius: 16px;
-			display: flex;
-			margin: 0 auto 20px;
-		}
-		 :global .ant-form {
-			display: flex;
-			flex-direction: column;
-			flex: 1;
-			.ant-form-item {
-				margin-bottom: 10px;
-				margin-top: 24px;
-				.ant-form-item-label {
-					label {
-						font-size: 14px;
-						line-height: 24px;
-						color: #9292A3;
-					}
-				}
-				.ant-form-item-control {
-					.ant-form-item-control-input-content {
-						.ant-input-number {
-							width: 100%;
-						}
-					}
-				}
-			}
-			button {
-				margin: 20px 16px 0 0;
-			}
-		}
-	}
+  :global {
+    .ant-drawer-content-wrapper {
+      .ant-drawer-content {
+        border-radius: 14px 14px 0 0;
+      }
+    }
+  }
+  .mobile-drawer {
+    .line {
+      width: 40px;
+      height: 3px;
+      background: #e3e3e5;
+      border-radius: 16px;
+      display: flex;
+      margin: 0 auto 20px;
+    }
+    :global .ant-form {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+      .ant-form-item {
+        margin-bottom: 10px;
+        margin-top: 24px;
+        .ant-form-item-label {
+          label {
+            font-size: 14px;
+            line-height: 24px;
+            color: #9292a3;
+          }
+        }
+        .ant-form-item-control {
+          .ant-form-item-control-input-content {
+            .ant-input-number {
+              width: 100%;
+            }
+          }
+        }
+      }
+      button {
+        margin: 20px 16px 0 0;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 767px) {
-	.create-pk {
-		flex-direction: column;
-		.header-wrap {
-			padding: 20px 20px 0;
-			margin-bottom: 16px;
-			flex-direction: column;
-			align-items: flex-start;
-			.title {
-				font-size: 16px;
-				line-height: 20px;
-				text-transform: capitalize;
-				color: #3D3D46;
-				margin-bottom: 12px;
-			}
-			.buttons {
-				display: flex;
-				flex-direction: row-reverse;
-				.buttons-filter {
-					margin-left: 16px;
-				}
-			}
-		}
-	}
+  .create-pk {
+    flex-direction: column;
+    .header-wrap {
+      padding: 20px 20px 0;
+      margin-bottom: 16px;
+      flex-direction: column;
+      align-items: flex-start;
+      .title {
+        font-size: 16px;
+        line-height: 20px;
+        text-transform: capitalize;
+        color: #3d3d46;
+        margin-bottom: 12px;
+      }
+      .buttons {
+        display: flex;
+        flex-direction: row-reverse;
+        .buttons-filter {
+          margin-left: 16px;
+        }
+      }
+    }
+  }
 }
