--- a/apps/web/pages/setup/issuing-company/issuing-company.module.less
+++ b/apps/web/pages/setup/issuing-company/issuing-company.module.less
@@ -3,6 +3,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  @media screen and (max-width: 767px) {
+    margin-bottom: 70px;
+  }
   .customForm {
     display: flex;
     flex-direction: column;
