Updated the changes as per the Willaim suggestions

--- a/apps/web/components/Setup/CoursesPackages/index.module.less
+++ b/apps/web/components/Setup/CoursesPackages/index.module.less
@@ -43,6 +43,18 @@
         color: #9292a3;
         padding: 5px;
       }
+      .createServiceImageContainer {
+        width: 100%;
+        height: 236px;
+        background-color: #f7f7f9;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 1rem;
+      }
     }
   }
 }
