--- a/apps/web/components/Setup/CoursesPackages/index.module.less
+++ b/apps/web/components/Setup/CoursesPackages/index.module.less
@@ -206,6 +206,7 @@
 @media screen and (max-width: 767px) {
   .create-pk {
     flex-direction: column;
+    margin-bottom: 80px;
     .header-wrap {
       padding: 20px 20px 0;
       margin-bottom: 16px;
