--- a/apps/web/pages/setup/issuing-company/issuing-company.module.less
+++ b/apps/web/pages/setup/issuing-company/issuing-company.module.less
@@ -3,9 +3,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  @media screen and (max-width: 767px) {
-    margin-bottom: 70px;
-  }
   .customForm {
     display: flex;
     flex-direction: column;
@@ -37,9 +34,6 @@
     border-top: 3px solid #fff;
     margin-bottom: 20px;
     opacity: 0.5;
-    @media screen and (max-width: 576px) {
-      width: 100%;
-    }
   }
   .focusedContentWrapper {
     width: 350px;
@@ -52,9 +46,6 @@
     border-top: 3px solid #fff;
     border-top: 3px solid #54b2d3;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-    @media screen and (max-width: 576px) {
-      width: 100%;
-    }
   }
   .error {
     margin: 0;
@@ -66,66 +57,14 @@
   }
 }
 
-.issuing-company-header {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-items: center;
-  h4 {
-    font-size: 16px;
-    line-height: 20px;
-    text-transform: capitalize;
-    color: #3d3d46;
-    margin-bottom: 0;
-  }
-  .issue-register {
-    display: flex;
-    align-items: center;
-    .status-box {
-      margin-left: 16px;
-      span {
-        font-size: 15px;
-        color: #9292a3;
-      }
+@media screen and (max-width: 767px) {
+  .mainWrapper {
+    margin-bottom: 70px;
+    .contentWrapper {
+      width: 100%;
     }
-    .vat-reg, .active{
-      small {
-        margin-right: 8px;
-        font-size: 14px;
-        line-height: 22px;
-        color: #9292a3;
-      }
-      button {
-        margin-right: 16px;
-      }
-    }
-    .btn-cancel {
-      margin: 0 16px;
-      button {
-        background: #ffffff;
-        border: 1px solid #ecedf0;
-        box-sizing: border-box;
-        border-radius: 4px;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 20px;
-        color: #9292a3;
-      }
-    }
-    .btn-delete {
-      margin-right: 16px;
-      button {
-        display: flex;
-        background: #ffffff;
-        border: 1px solid #ecedf0;
-        box-sizing: border-box;
-        border-radius: 4px;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 20px;
-        color: #9292a3;
-      }
+    .focusedContentWrapper {
+      width: 100%;
     }
   }
 }
