--- a/apps/web/components/Setup/Settings/PosConfiguration/common.module.less
+++ b/apps/web/components/Setup/Settings/PosConfiguration/common.module.less
@@ -79,21 +79,15 @@
       margin-left: 0;
     }
   }
-  .input-box-left {
+  .input-box {
     margin-bottom: 8px;
-    margin-right: 6px;
     input{
       color: #3D3D46;
       font-size: 16px;
     }
   }
-  .input-box-right {
-    margin-bottom: 8px;
+  .input-box-right-wrap {
     margin-left: 6px;
-    input{
-      color: #3D3D46;
-      font-size: 16px;
-    }
   }
   .index-wrap {
     display: flex;
