--- a/apps/web/components/CrudTable.module.less
+++ b/apps/web/components/CrudTable.module.less
@@ -211,12 +211,30 @@ title {
   }
 }
 
-// .table-custom {
-//   :global .ant-table-tbody {
-//     tr {
-//       td {
-//         word-break: break-all;
-//       }
-//     }
-//   }
-// }
+.no-search-result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 1rem 2rem 6rem;
+  background-color: white;
+  > p {
+    margin: 0;
+    font-family: var(--font-family);
+    font-weight: 500;
+    text-align: center;
+    &.no-results-text {
+      color: var(--grey-text-color);
+      font-size: 16px;
+      line-height: 24px;
+      margin-top: 18px;
+    }
+    &.try-adjust-text {
+      color: var(--light-grey-color);
+      font-size: 14px;
+      line-height: 22px;
+      margin-top: 2px;
+    }
+  }
+}
