--- a/libs/ui/src/lib/table/Table.module.less
+++ b/libs/ui/src/lib/table/Table.module.less
@@ -115,11 +115,12 @@
   text-align: center !important;
 }
 .no-data-table-box {
-  max-height: 277px;
+  padding: 2rem 2rem 4rem;
   width: 100%;
   background: #ffffff;
   border-radius: 4px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   .round-design {
@@ -133,7 +134,7 @@
     }
   }
 
-  .noData-text-style {
+  .no-data-text-style {
     text-align: center;
     height: 100%;
     width: 100%;
@@ -159,5 +160,33 @@
 @media screen and (max-width: 767px) {
   :global .ant-table-sticky-scroll {
     display: none;
+  }
+}
+
+.no-search-result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 1rem 2rem 6rem;
+  background-color: white;
+  > p {
+    margin: 0;
+    font-family: var(--font-family);
+    font-weight: 500;
+    text-align: center;
+    &.no-results-text {
+      color: var(--grey-text-color);
+      font-size: 16px;
+      line-height: 24px;
+      margin-top: 18px;
+    }
+    &.try-adjust-text {
+      color: var(--light-grey-color);
+      font-size: 14px;
+      line-height: 22px;
+      margin-top: 2px;
+    }
   }
 }
