did the changes as per comment

--- a/apps/web/components/Setup/Settings/SettingsLayout.module.less
+++ b/apps/web/components/Setup/Settings/SettingsLayout.module.less
@@ -1,6 +1,6 @@
-.general-layout-container {
+.settings-layout-container {
   border-left: 1px solid #ecedf0;
-  .general-layout-head {
+  .settings-layout-head {
     padding: 20px 24px;
     border-top: none;
     border-left: none;
