Squashed commit of the following:
commit 39a152d18568a01fa3ce3220913edada3218aa38
Author: Rocky Wang <wang.mythaero@gmail.com>
Date:   Wed Mar 31 10:08:40 2021 -0700

    Update Generated folder

commit 8a2796ae6632dfef40faf46a87cf31b0576753b3
Author: Rocky Wang <wang.mythaero@gmail.com>
Date:   Wed Mar 31 10:00:51 2021 -0700

    Update schema.prisma

commit 5966e81dd8cc58f06e22ce76be2d4d8eb20bf3ba
Author: Rocky Wang <wang.mythaero@gmail.com>
Date:   Wed Mar 31 07:33:43 2021 -0700

    Remove unused variable

commit 34de5ea3b298c101bf03863ae772bd826f2fc991
Author: Rocky Wang <wang.mythaero@gmail.com>
Date:   Wed Mar 31 07:07:49 2021 -0700

    Added keys

commit 0efa8d1f84870e562b04297f5a56a153cc75359d
Merge: 358f9d6a 32ac997e
Author: Rocky Wang <wang.mythaero@gmail.com>
Date:   Tue Mar 30 15:29:32 2021 -0700

    resolve conflicts

commit 358f9d6a4f1ede85d1b24c9989db78774ee8c8f6
Author: Rocky Wang <wang.mythaero@gmail.com>
Date:   Tue Mar 30 15:22:42 2021 -0700

    basically added keys for 12 pages

commit e2c8fae66f6fc71c6e4781ef8c86de88bd2614f9
Author: Rocky Wang <wang.mythaero@gmail.com>
Date:   Sun Mar 28 11:19:51 2021 -0700

    Refactor BlockOutOptions page (replace full-screen-modal), fix products page header

commit 69e212b277b9e202ca16d494530966977b3462b6
Author: Rocky Wang <wang.mythaero@gmail.com>
Date:   Sat Mar 27 21:00:27 2021 -0700

    Add Edit modal to Resource/Rooms page, fix breadcrumb in Drugs/Block/Loyalty

commit c778d93be5fce1e15e54476a891daa944ce9499d
Merge: 6a52efa3 4f3fb7ab
Author: Rocky Wang <wang.mythaero@gmail.com>
Date:   Sat Mar 27 20:33:19 2021 -0700

    Resolve conflicts

commit 6a52efa3dff12c7858eeaf5c227e1e83cca160cb
Author: Rocky Wang <wang.mythaero@gmail.com>
Date:   Fri Mar 26 12:10:46 2021 -0700

    Change drawer to modal

commit 98b5ebfe47d711cee2593993a9027b2e65c76d01
Author: Rocky Wang <wang.mythaero@gmail.com>
Date:   Fri Mar 26 11:02:18 2021 -0700

    Added ping.spec.ts.snap

commit cece4a5680852566d600d197fbc2cd70e7

--- a/apps/web/pages/setup/issuing-company/issuing-company.module.less
+++ b/apps/web/pages/setup/issuing-company/issuing-company.module.less
@@ -68,3 +68,13 @@
     }
   }
 }
+
+.operationSwitch {
+  display: flex;
+  font-family: var(--font-family);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  color: var(--light-grey-color);
+  margin-right: 2rem;
+}
