--- a/apps/web/pages/products/list.module.less
+++ b/apps/web/pages/products/list.module.less
@@ -1,3 +1,18 @@
+.productsListContainer {
+  :global {
+    @media (max-width: 767px) {
+      .ant-layout {
+        margin-top: 0;
+        min-height: min-content;
+      }
+      .ant-layout-content {
+        border-top: none;
+        min-height: min-content !important;
+      }
+    }
+  }
+}
+
 .headerContainer {
   display: flex;
   justify-content: space-between;
@@ -7,6 +22,12 @@
   :global {
     .ant-typography {
       padding: 0;
+      color: var(--grey-text-color);
+      @media (max-width: 767px) {
+        font-size: 17px;
+        line-height: 1;
+        color: var(--grey-text-color);
+      }
     }
   }
 
@@ -25,30 +46,14 @@
       border-left: 0;
     }
   }
+  @media (max-width: 767px) {
+    padding: 16px 16px 21px;
+  }
 }
 
 .headerRight {
   display: flex;
   align-items: center;
-  @media (max-width: 767px) {
-    > span {
-      cursor: pointer;
-      margin: 0;
-      margin-left: 1rem;
-      font-size: 25px;
-      color: var(--light-grey-color);
-      &:hover {
-        color: var(--primary-color);
-      }
-    }
-    button {
-      width: 32px;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  }
 }
 
 :global {
@@ -186,4 +191,35 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.menuIconStyle {
+  cursor: pointer;
+  color: var(--grey-text-color);
+  font-size: 14px;
+  margin-right: 10px;
+}
+
+.searchIconStyle {
+  font-size: 19px;
+  color: var(--light-grey-color);
+  padding-right: 25px;
+}
+
+.downloadIconStyle {
+  font-size: 19px;
+  color: var(--light-grey-color);
+  padding-right: 25px;
+}
+
+.filterIconStyle {
+  font-size: 19px;
+  color: var(--light-grey-color);
+  padding-right: 25px;
+}
+
+.plusIconStyle {
+  color: var(--primary-color);
+  font-size: 25px;
+  border-radius: 4px;
 }
