--- a/libs/ui/src/lib/full-screen-report-modal/FullScreenReportModal.module.less
+++ b/libs/ui/src/lib/full-screen-report-modal/FullScreenReportModal.module.less
@@ -2,23 +2,26 @@
   padding: 0;
   margin: 0;
   overflow: hidden;
+  width: 100vw;
+  max-width: 100vw;
+  top: 0;
   :global {
     .ant-modal {
       padding: 0;
       margin: 0;
       max-width: 100%;
       width: 100%;
-      min-height: 100vh;
-      top: 0;
-      left: 0;
+      height: 100vh;
+      top: 0 !important;
+      left: 0 !important;
     }
     .ant-modal-content {
-      min-height: 100vh;
+      height: 100vh;
       border-radius: 0;
     }
     .ant-modal-body {
       padding: 0;
-      min-height: 100vh;
+      height: 100vh;
       background-color: #f7f7f9;
     }
     .ant-modal-close {
@@ -27,7 +30,17 @@
   }
 }
 
+.fullScreenModalContainer {
+  width: 100%;
+  height: 100vh;
+  -webkit-overflow-scrolling: touch;
+  position: relative;
+}
+
 .fullScreenModalHeader {
+  position: fixed;
+  top: 0;
+  z-index: 9;
   width: 100%;
   height: 80px;
   display: flex;
@@ -46,6 +59,9 @@
       line-height: 20px;
       color: var(--grey-text-color);
     }
+  }
+  @media (max-width: 767px) {
+    height: 60px;
   }
 }
 
@@ -66,19 +82,19 @@
 
 .fullScreenModalBody {
   width: 100%;
-  height: calc(100vh - 80px);
+  height: 100%;
+  padding-top: 80px;
   overflow-y: auto;
+  -webkit-overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
   :global {
     .ant-tabs-nav {
       background-color: white;
     }
   }
-}
-
-.tabPaneItem {
-  width: 100%;
-  height: calc(100vh - 122px);
-  overflow-y: auto;
+  @media (max-width: 767px) {
+    padding: 60px 0;
+  }
 }
 
 .moreButton {
@@ -100,20 +116,15 @@
 }
 
 .fullScreenModalFooter {
-  position: absolute;
-  bottom: 0px;
+  position: fixed;
+  bottom: 0;
   background-color: #ffffff;
+  border-top: 1px solid var(--border-color-base);
   width: 100%;
-  display: flex;
-  justify-content: flex-end;
+  height: 60px;
+  display: grid;
+  grid-column-gap: 8px;
   align-items: center;
-  padding: 15px 30px;
+  padding: 0 1rem;
   z-index: 9;
-
-  > * {
-    margin-left: 10px;
-  }
-  label {
-    margin-right: 10px;
-  }
 }
