fix notification icon

--- a/libs/ui/src/lib/notificationDrawer/NotificationDrawer.module.less
+++ b/libs/ui/src/lib/notificationDrawer/NotificationDrawer.module.less
@@ -133,6 +133,7 @@
     align-items: center;
     justify-content: space-between;
     .notify-title-desc {
+      width: 100%;
       h1 {
         margin-top: 8px;
         font-family: Circular-Std-Bold;
