[skip ci] yarn format:write --all

--- a/libs/ui/src/lib/lead-create/LeadCreate.module.less
+++ b/libs/ui/src/lib/lead-create/LeadCreate.module.less
@@ -1,4 +1,4 @@
-.main-div{
+.main-div {
   width: 502px;
   margin: auto;
   .more-btn {
@@ -12,12 +12,12 @@
       margin-bottom: 0;
       margin-left: 10px;
     }
-    color: #9292A3;
+    color: #9292a3;
   }
   .padding-at-end {
     margin-bottom: 200px;
   }
-  .general-div{
+  .general-div {
     background-color: #fff;
     padding: 27px 32px;
     margin-top: 40px;
@@ -25,10 +25,10 @@
     h5 {
       font-size: 14px;
       line-height: 24px;
-      color: #3D3D46;
+      color: #3d3d46;
       margin-bottom: 23px;
     }
-    .wrap-name-info{
+    .wrap-name-info {
       display: flex;
       .first-name {
         margin-right: 16px;
@@ -39,11 +39,12 @@
           label {
             font-size: 14px;
             line-height: 22px;
-            color: #9292A3;
+            color: #9292a3;
           }
         }
       }
-      .first-name, .last-name{
+      .first-name,
+      .last-name {
         width: 211px;
         :global {
           .ant-form-item {
@@ -52,14 +53,14 @@
               label {
                 font-size: 14px;
                 line-height: 22px;
-                color: #9292A3;
+                color: #9292a3;
               }
             }
             .ant-form-item-control {
               .ant-form-item-control-input {
                 .ant-form-item-control-input-content {
                   input {
-                    border: 1px solid #ECEDF0;
+                    border: 1px solid #ecedf0;
                     height: 40px;
                     border-radius: 4px;
                   }
@@ -70,31 +71,31 @@
         }
       }
 
-      label{
-        color: #9292A3;
+      label {
+        color: #9292a3;
         font-weight: normal;
         font-size: 14px;
         line-height: 24px;
       }
-      .ant-select-selector{
-        border: 1px solid #ECEDF0;
+      .ant-select-selector {
+        border: 1px solid #ecedf0;
         border-radius: 4px;
       }
-      input{
-        border: 1px solid #ECEDF0;
+      input {
+        border: 1px solid #ecedf0;
         border-radius: 4px;
-        color: #CCCFD6;
+        color: #cccfd6;
         font-size: 16px;
       }
     }
 
-    .custom-common{
+    .custom-common {
       :global {
         .ant-form-item-label {
           label {
             font-size: 14px;
             line-height: 24px;
-            color: #9292A3;
+            color: #9292a3;
           }
         }
         .ant-form-item-control {
@@ -122,7 +123,7 @@
           }
         }
       }
-      .language-left{
+      .language-left {
         display: flex;
         align-items: center;
         span {
@@ -133,14 +134,14 @@
   }
 
   .contact-info {
-    background: #FFFFFF;
+    background: #ffffff;
     border-radius: 4px;
     padding: 27px 32px;
     margin-top: 24px;
     h5 {
       font-size: 14px;
       line-height: 24px;
-      color: #3D3D46;
+      color: #3d3d46;
       margin-bottom: 23px;
     }
     .contact-form {
@@ -150,7 +151,7 @@
           label {
             font-size: 14px;
             line-height: 22px;
-            color: #9292A3;
+            color: #9292a3;
           }
         }
         .ant-form-item-control {
@@ -158,7 +159,7 @@
             .ant-form-item-control-input-content {
               input {
                 height: 40px;
-                border: 1px solid #ECEDF0;
+                border: 1px solid #ecedf0;
                 box-sizing: border-box;
                 border-radius: 4px;
               }
@@ -169,20 +170,20 @@
     }
   }
   .subscription-form {
-    background: #FFFFFF;
+    background: #ffffff;
     border-radius: 4px;
     padding: 27px 32px;
     margin-top: 24px;
     h5 {
       font-size: 14px;
       line-height: 24px;
-      color: #3D3D46;
+      color: #3d3d46;
       margin-bottom: 0;
     }
     p {
       font-size: 14px;
       line-height: 22px;
-      color: #9292A3;
+      color: #9292a3;
       margin-bottom: 21px;
     }
     :global .ant-form-item {
@@ -196,19 +197,19 @@
         margin-bottom: 0;
         font-size: 14px;
         line-height: 22px;
-        color: #9292A3;
+        color: #9292a3;
       }
     }
   }
   .address-form {
-    background: #FFFFFF;
+    background: #ffffff;
     border-radius: 4px;
     padding: 27px 32px;
     margin-top: 24px;
     h5 {
       font-size: 14px;
       line-height: 24px;
-      color: #3D3D46;
+      color: #3d3d46;
       margin-bottom: 23px;
     }
     .address-form-layout {
@@ -218,7 +219,7 @@
           label {
             font-size: 14px;
             line-height: 22px;
-            color: #9292A3;
+            color: #9292a3;
           }
         }
         .ant-form-item-control {
@@ -226,15 +227,15 @@
             .ant-form-item-control-input-content {
               .ant-select {
                 .ant-select-selector {
-                  background: #FFFFFF;
-                  border: 1px solid #ECEDF0;
+                  background: #ffffff;
+                  border: 1px solid #ecedf0;
                   box-sizing: border-box;
                   border-radius: 4px;
                   height: 40px;
                   .ant-select-selection-item {
                     line-height: 40px;
                     font-size: 16px;
-                    color: #B8B8C0;
+                    color: #b8b8c0;
                   }
                 }
               }
@@ -246,19 +247,19 @@
                   &::placeholder {
                     font-size: 16px;
                     line-height: 24px;
-                    color: #B8B8C0;
+                    color: #b8b8c0;
                   }
                 }
               }
               input {
                 height: 40px;
-                border: 1px solid #ECEDF0;
+                border: 1px solid #ecedf0;
                 box-sizing: border-box;
                 border-radius: 4px;
                 &::placeholder {
                   font-size: 16px;
                   line-height: 24px;
-                  color: #B8B8C0;
+                  color: #b8b8c0;
                 }
               }
             }
@@ -268,14 +269,14 @@
     }
   }
   .statistic-info {
-    background: #FFFFFF;
+    background: #ffffff;
     border-radius: 4px;
     padding: 27px 32px;
     margin-top: 24px;
     h5 {
       font-size: 14px;
       line-height: 24px;
-      color: #3D3D46;
+      color: #3d3d46;
       margin-bottom: 23px;
     }
     .statistic-custom-form {
@@ -285,7 +286,7 @@
           label {
             font-size: 14px;
             line-height: 22px;
-            color: #9292A3;
+            color: #9292a3;
           }
         }
         .ant-form-item-control {
@@ -293,21 +294,21 @@
             .ant-form-item-control-input-content {
               .ant-select {
                 .ant-select-selector {
-                  background: #FFFFFF;
-                  border: 1px solid #ECEDF0;
+                  background: #ffffff;
+                  border: 1px solid #ecedf0;
                   box-sizing: border-box;
                   border-radius: 4px;
                   height: 40px;
                   .ant-select-selection-item {
                     line-height: 40px;
                     font-size: 16px;
-                    color: #B8B8C0;
+                    color: #b8b8c0;
                   }
                 }
               }
               input {
                 height: 40px;
-                border: 1px solid #ECEDF0;
+                border: 1px solid #ecedf0;
                 box-sizing: border-box;
                 border-radius: 4px;
               }
@@ -323,29 +324,28 @@
   .main-div {
     width: 100%;
     padding: 16px;
-    .general-div{
+    .general-div {
       padding: 24px;
       margin-top: 24px;
 
-      .wrap-name-info{
+      .wrap-name-info {
         display: flex;
         flex-direction: column;
-        .first-name{
+        .first-name {
           margin-left: 0;
         }
-        .last-name{
+        .last-name {
           margin-left: 0;
         }
       }
 
-
-      .custom-common{
+      .custom-common {
         :global {
           .ant-form-item-label {
             label {
               font-size: 14px;
               line-height: 24px;
-              color: #9292A3;
+              color: #9292a3;
             }
           }
           .ant-form-item-control {
@@ -388,5 +388,3 @@
     align-items: center;
   }
 }
-
-
