--- a/libs/ui/src/lib/client-create/ClientCreate.module.less
+++ b/libs/ui/src/lib/client-create/ClientCreate.module.less
@@ -1,4 +1,4 @@
-.main-div{
+.main-div {
   width: 502px;
   margin: auto;
   .more-btn {
@@ -12,12 +12,12 @@
       margin-bottom: 0;
       margin-left: 10px;
     }
-    color: #9292A3;
+    color: #9292a3;
   }
   .padding-at-end {
     margin-bottom: 200px;
   }
-  .general-div{
+  .general-div {
     background-color: #fff;
     padding: 27px 32px;
     margin-top: 40px;
@@ -27,22 +27,22 @@
       justify-content: space-between;
       align-items: center;
       margin-bottom: 18px;
-      h2{
-        color: #3D3D46;
+      h2 {
+        color: #3d3d46;
         font-size: 14px;
         line-height: 24px;
       }
       button {
-        border: 1px solid #ECEDF0;
+        border: 1px solid #ecedf0;
         border-radius: 40px;
         font-size: 16px;
         line-height: 24px;
-        color: #9292A3;
+        color: #9292a3;
         font-weight: 300;
       }
     }
 
-    .salutation-first-div{
+    .salutation-first-div {
       display: flex;
       :global .ant-form-item {
         .ant-form-item-label {
@@ -50,7 +50,7 @@
           label {
             font-size: 14px;
             line-height: 22px;
-            color: #9292A3;
+            color: #9292a3;
           }
         }
         .ant-select {
@@ -62,7 +62,8 @@
           }
         }
       }
-      .first-name, .last-name{
+      .first-name,
+      .last-name {
         margin-left: 16px;
         :global {
           .ant-form-item {
@@ -71,14 +72,14 @@
               label {
                 font-size: 14px;
                 line-height: 22px;
-                color: #9292A3;
+                color: #9292a3;
               }
             }
             .ant-form-item-control {
               .ant-form-item-control-input {
                 .ant-form-item-control-input-content {
                   input {
-                    border: 1px solid #ECEDF0;
+                    border: 1px solid #ecedf0;
                     height: 40px;
                     border-radius: 4px;
                   }
@@ -89,36 +90,31 @@
         }
       }
 
-      label{
-        color: #9292A3;
+      label {
+        color: #9292a3;
         font-weight: normal;
         font-size: 14px;
         line-height: 24px;
-
       }
-      .ant-select-selector{
-        border: 1px solid #ECEDF0;
+      .ant-select-selector {
+        border: 1px solid #ecedf0;
         border-radius: 4px;
-
       }
-      input{
-        border: 1px solid #ECEDF0;
+      input {
+        border: 1px solid #ecedf0;
         border-radius: 4px;
-        color: #CCCFD6;
+        color: #cccfd6;
         font-size: 16px;
-
-
       }
     }
 
-
-    .custom-common{
+    .custom-common {
       :global {
         .ant-form-item-label {
           label {
             font-size: 14px;
             line-height: 24px;
-            color: #9292A3;
+            color: #9292a3;
           }
         }
         .ant-form-item-control {
@@ -146,7 +142,7 @@
           }
         }
       }
-      .language-left{
+      .language-left {
         display: flex;
         align-items: center;
         span {
@@ -157,14 +153,14 @@
   }
 
   .contact-info {
-    background: #FFFFFF;
+    background: #ffffff;
     border-radius: 4px;
     padding: 27px 32px;
     margin-top: 24px;
     h5 {
       font-size: 14px;
       line-height: 24px;
-      color: #3D3D46;
+      color: #3d3d46;
       margin-bottom: 23px;
     }
     .contact-form {
@@ -174,7 +170,7 @@
           label {
             font-size: 14px;
             line-height: 22px;
-            color: #9292A3;
+            color: #9292a3;
           }
         }
         .ant-form-item-control {
@@ -182,7 +178,7 @@
             .ant-form-item-control-input-content {
               input {
                 height: 40px;
-                border: 1px solid #ECEDF0;
+                border: 1px solid #ecedf0;
                 box-sizing: border-box;
                 border-radius: 4px;
               }
@@ -193,20 +189,20 @@
     }
   }
   .subscription-form {
-    background: #FFFFFF;
+    background: #ffffff;
     border-radius: 4px;
     padding: 27px 32px;
     margin-top: 24px;
     h5 {
       font-size: 14px;
       line-height: 24px;
-      color: #3D3D46;
+      color: #3d3d46;
       margin-bottom: 0;
     }
     p {
       font-size: 14px;
       line-height: 22px;
-      color: #9292A3;
+      color: #9292a3;
       margin-bottom: 21px;
     }
     :global .ant-form-item {
@@ -220,19 +216,19 @@
         margin-bottom: 0;
         font-size: 14px;
         line-height: 22px;
-        color: #9292A3;
+        color: #9292a3;
       }
     }
   }
   .address-form {
-    background: #FFFFFF;
+    background: #ffffff;
     border-radius: 4px;
     padding: 27px 32px;
     margin-top: 24px;
     h5 {
       font-size: 14px;
       line-height: 24px;
-      color: #3D3D46;
+      color: #3d3d46;
       margin-bottom: 23px;
     }
     .address-form-layout {
@@ -242,7 +238,7 @@
           label {
             font-size: 14px;
             line-height: 22px;
-            color: #9292A3;
+            color: #9292a3;
           }
         }
         .ant-form-item-control {
@@ -250,15 +246,15 @@
             .ant-form-item-control-input-content {
               .ant-select {
                 .ant-select-selector {
-                  background: #FFFFFF;
-                  border: 1px solid #ECEDF0;
+                  background: #ffffff;
+                  border: 1px solid #ecedf0;
                   box-sizing: border-box;
                   border-radius: 4px;
                   height: 40px;
                   .ant-select-selection-item {
                     line-height: 40px;
                     font-size: 16px;
-                    color: #B8B8C0;
+                    color: #b8b8c0;
                   }
                 }
               }
@@ -270,19 +266,19 @@
                   &::placeholder {
                     font-size: 16px;
                     line-height: 24px;
-                    color: #B8B8C0;
+                    color: #b8b8c0;
                   }
                 }
               }
               input {
                 height: 40px;
-                border: 1px solid #ECEDF0;
+                border: 1px solid #ecedf0;
                 box-sizing: border-box;
                 border-radius: 4px;
                 &::placeholder {
                   font-size: 16px;
                   line-height: 24px;
-                  color: #B8B8C0;
+                  color: #b8b8c0;
                 }
               }
             }
@@ -292,7 +288,7 @@
     }
   }
   .third-party-form {
-    background: #FFFFFF;
+    background: #ffffff;
     border-radius: 4px;
     padding: 27px 32px;
     margin-top: 24px;
@@ -302,12 +298,12 @@
         font-size: 14px;
         line-height: 24px;
         margin-bottom: 0;
-        color: #3D3D46;
+        color: #3d3d46;
       }
       p {
         font-size: 14px;
         line-height: 22px;
-        color: #9292A3;
+        color: #9292a3;
         margin-bottom: 19px;
       }
       :global .ant-form-item {
@@ -317,7 +313,7 @@
           .ant-radio-wrapper {
             font-size: 14px;
             line-height: 22px;
-            color: #3D3D46;
+            color: #3d3d46;
             margin-bottom: 14px;
             &:last-child {
               margin-bottom: 0;
@@ -333,7 +329,7 @@
   .ant-select-item {
     .ant-select-item-option-content {
       font-style: normal;
-      [class*="ClientCreate_language-left"] {
+      [class*='ClientCreate_language-left'] {
         display: flex;
         align-items: center;
         span {
@@ -380,25 +376,25 @@
       }
     }
   }
-.tagName {
-  flex: 1;
-  color: #6f7577;
-  font-size: 14px;
-  padding: 0 10px;
-  line-height: 40px;
-}
+  .tagName {
+    flex: 1;
+    color: #6f7577;
+    font-size: 14px;
+    padding: 0 10px;
+    line-height: 40px;
+  }
 }
 .tag-custom-wrap {
   padding: 5px 12px 0 45px;
 }
 .tag-color-picker {
   div {
-      width: 22px;
-      height: 22px;
-      border-radius: 50%;
-      opacity: 1;
-      margin: 6px 6px 6px 0;
-    }
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    opacity: 1;
+    margin: 6px 6px 6px 0;
+  }
 }
 .scroller-tag {
   max-height: 180px;
@@ -455,29 +451,28 @@
   .main-div {
     width: 100%;
     padding: 16px;
-    .general-div{
+    .general-div {
       padding: 24px;
       margin-top: 24px;
 
-      .salutation-first-div{
+      .salutation-first-div {
         display: flex;
         flex-direction: column;
-        .first-name{
+        .first-name {
           margin-left: 0;
         }
-        .last-name{
+        .last-name {
           margin-left: 0;
         }
       }
 
-
-      .custom-common{
+      .custom-common {
         :global {
           .ant-form-item-label {
             label {
               font-size: 14px;
               line-height: 24px;
-              color: #9292A3;
+              color: #9292a3;
             }
           }
           .ant-form-item-control {
