--- a/libs/ui/src/lib/full-screen-report-modal/FullScreenReportModal.module.less
+++ b/libs/ui/src/lib/full-screen-report-modal/FullScreenReportModal.module.less
@@ -75,17 +75,17 @@
     h5 {
       font-size: 14px;
       line-height: 24px;
-      color: #9292A3;
+      color: #9292a3;
       margin: 0 12px;
     }
     .avatar-icon {
-        background: #40A0C1 !important;
+      background: #40a0c1 !important;
     }
     h6 {
       font-size: 14px;
       line-height: 24px;
       margin: 0 32px 0 12px;
-      color: #3D3D46;
+      color: #3d3d46;
     }
   }
 }
