reattempt. gets stuck compiling, no error, just hangs forever.

--- a/libs/ui/src/styles/antd.less
+++ b/libs/ui/src/styles/antd.less
@@ -66,23 +66,23 @@
   --green-primary-color: @green-primary-color;
 }
 
-@font-face {
-  font-family: 'Circular-Std-Bold';
-  src: url('../assets/fonts/CircularStd-Bold.woff') format('woff'),
-    url('../assets/fonts/CircularStd-Bold.otf') format('otf');
-}
-@font-face {
-  font-family: 'Circular-Std-Black';
-  src: url('../assets/fonts/CircularStd-Black.otf') format('otf');
-}
-@font-face {
-  font-family: 'Circular-Std-Book';
-  src: url('../assets/fonts/CircularStd-Book.otf') format('otf');
-}
-@font-face {
-  font-family: 'Circular-Std-Medium';
-  src: url('../assets/fonts/CircularStd-Medium.otf') format('otf');
-}
+//@font-face {
+//  font-family: 'Circular-Std-Bold';
+//  src: url('../assets/fonts/CircularStd-Bold.woff') format('woff'),
+//    url('../assets/fonts/CircularStd-Bold.otf') format('otf');
+//}
+//@font-face {
+//  font-family: 'Circular-Std-Black';
+//  src: url('../assets/fonts/CircularStd-Black.otf') format('otf');
+//}
+//@font-face {
+//  font-family: 'Circular-Std-Book';
+//  src: url('../assets/fonts/CircularStd-Book.otf') format('otf');
+//}
+//@font-face {
+//  font-family: 'Circular-Std-Medium';
+//  src: url('../assets/fonts/CircularStd-Medium.otf') format('otf');
+//}
 
 @keyframes emptyanim {
 }
