showing labels in one line and popover

--- a/apps/web/pages/clients/clients.module.less
+++ b/apps/web/pages/clients/clients.module.less
@@ -97,6 +97,18 @@
   }
 }
 
+//.label-button {
+//  border: 1px solid rgba(84, 178, 211, 0.5);
+//  box-sizing: border-box;
+//  border-radius: 4px;
+//  height: 24px;
+//  color: #54b2d3;
+//  display: flex;
+//  align-items: center;
+//  justify-content: center;
+//  margin-bottom: 5px;
+//}
+
 .label-button {
   border: 1px solid rgba(84, 178, 211, 0.5);
   box-sizing: border-box;
@@ -107,6 +119,7 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 5px;
+  margin-right: 0.5rem;
 }
 
 .table-content {
@@ -595,3 +608,25 @@
     }
   }
 }
+
+.label-scroll{
+  max-height: 150px;
+  overflow-y: scroll;
+}
+
+
+//.label-scroll {
+//  height: auto;
+//  max-height: 150px;
+//  overflow-x: hidden;
+//}
+
+.label-show {
+  display: flex;
+  flex-direction: row;
+}
+
+//.ant-menu-submenu > .ant-menu {
+//  height: 80px;
+//  overflow: auto;
+//}
