--- a/libs/ui/src/lib/form-component/FormComponent.module.less
+++ b/libs/ui/src/lib/form-component/FormComponent.module.less
@@ -476,3 +476,33 @@
   color: red;
   margin-left: 3px;
 }
+.snomedItem {
+  padding: 12px;
+}
+.snomedTitle {
+  font-size: 14px;
+  line-height: 22px;
+  display: flex;
+  align-items: center;
+  color: #3d3d46;
+}
+.snomedDescription {
+  font-size: 12px;
+  line-height: 14px;
+  display: flow-root;
+  align-items: center;
+  color: #9292a3;
+}
+.snomedFsn {
+  float: left;
+}
+.snomedConceptId {
+  float: right;
+}
+.autocompleteWrap {
+  :global {
+    .ant-select-item-option {
+      border-bottom: 1px solid #ecedf0;
+    }
+  }
+}
